--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1222,9 +1222,16 @@ button.xui-removeImageButton{
 .xui-propertyView-navbar-settings .propertyGroup_property_radioField .propertyGroup_property_label{
 	text-align: left;
 }
-/*.xui-propertyView-navbar-settings .propertyGroup_property_radioField .propertyGroup_property_input{
-	text-align: center;
+/*.xui-propertyView-navbar-navs .propertyGroup_property_label:first-child{
+	display: none;
 }*/
+.xui-wepage-globalNavPage .xui-propertyView-navbar-navs .propertyGroup_property_dynamicControlField_control{
+	border:1px solid #E6E6E6;
+}
+.propertyGroup_property_secondNavsField .propertyGroup_property_input{
+	width: 100%;
+}
+
 /**
  * dialog对话框 商品列表
  */
