--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -473,7 +473,7 @@
 									<div class="propertyGroup_property_input pr" style="width:80px; height:auto;">
 										<input data-field="${dynamicComponentField.name}" name="${dynamicComponentField.name}" type="hidden"/>
 										<div 
-											class="xa-thirdPartyPlugin"
+											class="xui-secondNav xa-thirdPartyPlugin"
 											data-plugin="secondnav" 
 											data-ui-role="termite-navbar-secondnav"
 											data-json="${dynamicComponent.model.get(dynamicComponentField.name)}"
