--- a/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
+++ b/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
@@ -11,7 +11,7 @@
 <script id="termite-navbar-secondnav-tmpl-nav" type="text/x-handlebar-tmpl">
 	<div class="propertyGroup_property_dynamicControlField_content xui-text xa-nav propertyGroup_property_dynamicControlField_control2">
 		<div class="propertyGroup_property_textField propertyGroup_property_horizontalField xa-errorHintContainer">
-			<div class="propertyGroup_property_label star_show">标题</div>
+			<div class="propertyGroup_property_label">标题</div>
 			<div class="propertyGroup_property_input1">
 				<input 
 					name="title"
@@ -27,7 +27,7 @@
 			</div>                                                                                
 
 		<div class="propertyGroup_property_linkSelectField propertyGroup_property_horizontalField xa-errorHintContainer">
-			<div class="propertyGroup_property_label star_show">链接</div>
+			<div class="propertyGroup_property_label">链接</div>
 			<div class="propertyGroup_property_input xui-eidt-urlBox" style="height: auto;">
 				<input data-field="second-nav-target" name="second-nav-target" type="hidden" value="{{target}}" data-validate="require-notempty::链接地址不能为空" data-force-validate="true">
 
