--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -476,7 +476,7 @@
 											class="xui-secondNav xa-thirdPartyPlugin"
 											data-plugin="secondnav" 
 											data-ui-role="termite-navbar-secondnav"
-											data-json="${dynamicComponent.model.get(dynamicComponentField.name)}"
+											data-json="${JSON.stringify(dynamicComponent.model.get(dynamicComponentField.name))}"
 										></div>
 									</div>
 								</div>
