--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -307,6 +307,9 @@
 						{{each(dynamicComponentIndex, dynamicComponent) dynamicComponents}}
 						{{if !dynamicComponent.runtimeData || !dynamicComponent.runtimeData.isInvalid}}
 						<div class="propertyGroup_property_dynamicControlField_control" data-dynamic-cid="${dynamicComponent.cid}" data-parent-cid="${component.cid}">
+							{{if dynamicComponent.propertyViewTitle}}
+							<div class="propertyGroup_property_label">${dynamicComponent.propertyViewTitle}</div>
+							{{/if}}
 							<!--
 							<h3 class="propertyGroup_property_dynamicControlField_title clearfix">
 								<i class="icon-chevron-right"></i> 
