--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -54,6 +54,7 @@
 			<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/direct_follow.css">
 
 			<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/termite.css">
+			<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/apps_termite.css">
 			<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/termite_workbench.css">
 			<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/marketing.css">
 		<!-- *end_prunt_task* -->
@@ -154,25 +155,6 @@
 			<!-- dialogs end -->
 		<!-- *end_prunt_task* -->
 
-
-
-
-
-		<!-- *start_prunt_task* -->
-		<!-- [prunt_task] 
-			{
-				"task": "weizoom-generate-component-front-template",
-				"args": {
-					"component_type": "weapp"
-				}
-			}
-		-->
-			<!-- handlebar component start -->
-			<script type="text/x-handlebar-template" id="componentTemplates">
-			{{ handlebar_component_template|safe }}
-			</script>
-			<!-- handlebar component end -->
-		<!-- *end_prunt_task* -->
 
 
 
