--- a/weapp/apps/app_template/templates/editor/participance_list_template.html
+++ b/weapp/apps/app_template/templates/editor/participance_list_template.html
@@ -82,7 +82,18 @@ __STRIPPER_TAG__
 __STRIPPER_TAG__
 __STRIPPER_TAG__
 <% block js %>
+
+
+<!-- *start_prunt_task* -->
+	<!-- [prunt_task] 
+	  {
+	    "task": "weizoom-load-app-views-dialogs"
+	  }
+	-->
 << "{{app_name}}"|load_app_views_and_dialogs|safe >>
+<!-- *end_prunt_task* -->
+
+
 {% verbatim %}
 <% verbatim %>
 <script id="table" type="text/x-jquery-tmpl">
