--- a/weapp/apps/customerized_apps/event/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/workbench.html
@@ -3,10 +3,6 @@
 {% load workbench_filter %}
 {% load apps_filter %}
 
-{% block css %}
-<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/apps_termite.css">
-{% endblock %}
-
 {% block content-panel %}
 <div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
   <div class="relative">
@@ -59,19 +55,18 @@
 </div>
 {% endblock %}
 
+
 {% block base_js %}
-  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.textsurvey", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_app_components|safe }}
-  <script type="text/x-handlebar-template" id="componentTemplates">
-    {{ "appkit"|load_app_components_handlebar_templates|safe }}
-  </script>
-  
-  <!-- start of ueditor -->
-  <script type="text/javascript">
-   window.UEDITOR_HOME_URL = '/static/ueditor-1.2.6.1/'
-  </script>  
-  <script type="text/javascript" src="/static/ueditor-1.2.6.1/ueditor.config.js"></script>
-  <script type="text/javascript" src="/static/ueditor-1.2.6.1/ueditor.all.js"></script>
-  <!-- end of ueditor -->
+
+  <!-- *start_prunt_task* -->
+    <!-- [prunt_task] 
+      {
+        "task": "weizoom-load-termite-components"
+      }
+    -->  
+  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_termite_components|safe }}
+  <!-- *end_prunt_task* -->
+
   
   <script type="text/javascript">
     W.uid = {{ user.id }};
