--- a/weapp/static_v2/css/apps_termite.css
+++ b/weapp/static_v2/css/apps_termite.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.xui-workbench-rightPanel .errorHint {
+.xui-appPage-commonStyle .xui-workbench-rightPanel .errorHint {
 	padding-top: 0px;
 	padding-bottom: 5px;
 }
