修改会员详情

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -247,7 +247,7 @@
 				<div class="xui-rightPanelTitle">
 					传播能力
 				</div>
-				{% if shared_url_infos %}
+				{% if shared_url_infos or qrcode_friends %}
 				 <div class="xui-p-infowrap-num">
 				 	<div style="width: 332px;">
 			        	<p class="xui-p-infowrap-left fl " style="  width: 130px;" >
