--- a/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
@@ -47,47 +47,53 @@
         </ul>
 
         <div class="xui-massageSendingHead">
-            消息发送给：
-            {% if mode == 'filter' %}
-                <span class="xui-sendTargetGroup ml5">会员分组({{category}})</span>
-                <span class="xui-sendTargetGroup ml5">会员等级({{grade}})</span>
-                <span class="xui-sendTargetGroup ml5">会员状态({{status}})</span>
-                <span class="xui-sendTargetGroup ml5">会员来源({{source}})</span>
-                {% if unit_price %}
-                    <span class="xui-sendTargetGroup ml5">平均客单价({{unit_price}})
-                    </span>
-                {% endif %}
-                {% if created_at %}
-                    <span class="xui-sendTargetGroup ml5">关注时间({{created_at}})
-                    </span>
-                {% endif %}
-                {% if pay_money %}
-                    <span class="xui-sendTargetGroup ml5">消费总额({{pay_money}})
-                    </span>
-                {% endif %}
-                {% if pay_times %}
-                    <span class="xui-sendTargetGroup ml5">购买次数({{pay_times}})
-                    </span>
-                {% endif %}
-                {% if last_pay_time %}
-                    <span class="xui-sendTargetGroup ml5">最后购买时间({{last_pay_time}})
-                    </span>
-                {% endif %}
-                {% if integral %}
-                    <span class="xui-sendTargetGroup ml5">积分范围({{integral}})
-                    </span>
-                {% endif %}
-                {% if last_message_time %}
-                    <span class="xui-sendTargetGroup ml5">最后对话时间({{last_message_time}})
-                    </span>
-                {% endif %}
+            <div class="xui-left">
+                <span class="fl">消息发送给：</span>
+            </div>
+            <div class="xui-right">
+                {% if mode == 'filter' %}
+                    <span class="xui-sendTargetGroup ml5 fl">会员分组({{category}})</span>
+                    <span class="xui-sendTargetGroup ml5 fl">会员等级({{grade}})</span>
+                    <span class="xui-sendTargetGroup ml5 fl">会员状态({{status}})</span>
+                    <span class="xui-sendTargetGroup ml5 fl">会员来源({{source}})</span>
+                    {% if unit_price %}
+                        <span class="xui-sendTargetGroup ml5">平均客单价({{unit_price}})
+                        </span>
+                    {% endif %}
+                    {% if created_at %}
+                        <span class="xui-sendTargetGroup ml5">关注时间({{created_at}})
+                        </span>
+                    {% endif %}
+                    {% if pay_money %}
+                        <span class="xui-sendTargetGroup ml5">消费总额({{pay_money}})
+                        </span>
+                    {% endif %}
+                    {% if pay_times %}
+                        <span class="xui-sendTargetGroup ml5">购买次数({{pay_times}})
+                        </span>
+                    {% endif %}
+                    {% if last_pay_time %}
+                        <span class="xui-sendTargetGroup ml5">最后购买时间({{last_pay_time}})
+                        </span>
+                    {% endif %}
+                    {% if integral %}
+                        <span class="xui-sendTargetGroup ml5">积分范围({{integral}})
+                        </span>
+                    {% endif %}
+                    {% if last_message_time %}
+                        <span class="xui-sendTargetGroup ml5">最后对话时间({{last_message_time}})
+                        </span>
+                    {% endif %}
 
-                <div class="hidden xa-sendMemberIds" data-send-member-ids={{member_ids_str}}></div>
-            {% else %}
-                {% for member in member_list %}
-                    <span class="xui-sendTargetNames xa-sendTargetNames ml5" data-member-id={{member.id}}>{{member.name|safe}}</span>
-                {% endfor %}
-            {% endif %}
+                    <div class="hidden xa-sendMemberIds" data-send-member-ids={{member_ids_str}}></div>
+                {% else %}
+                    {% for member in member_list %}
+                        <span class="xui-sendTargetNames xa-sendTargetNames ml5" data-member-id={{member.id}}>{{member.name|safe}}</span>
+                    {% endfor %}
+                {% endif %}
+                <div class="cb"></div>
+            </div>
+             <div class="cb"></div>
         </div>
 
         <div class="xui-massageSendingGroup xa-changeSendNumber" data-send-number={{number}}>
